--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -23,7 +23,7 @@ email: jszlog@hkmi2.org
 description: >- # this means to ignore newlines until "baseurl:"
   Jszlog is a zeroth-order logic engine, written in javascript.
   It's main purpose is to teach the basic concepts of logic-based, data-driven systems.
-baseurl: "/docs" # the subpath of your site, e.g. /blog
+baseurl: "/jszlog/docs" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 # github_username:  jekyll
